Implemented basic functionality to retrieve the commits and diffs;

--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/Havrl/bitbucket-repo-watcher#readme",
   "dependencies": {
+    "dotenv": "^6.2.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "npm": "^6.7.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
   }
 }
