--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "nodemailer": "^5.1.1",
     "npm": "^6.7.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
