Added configurable dates

--- a/.env_example
+++ b/.env_example
@@ -5,8 +5,11 @@
 
 # Bitbucket details
 BITBUCKET_REPO_URL=https://api.bitbucket.org/2.0/repositories/user/repo-slug/
+BITBUCKET_REPO_DESC=ocrex.desktop.docurec-v2
 BITBUCKET_USER=user_name
 BITBUCKET_PASS=pass$$ord
+# 30 commits per page
+COMMIT_PAGES=4;
 
 # Email sender details
 EMAIL_PROVIDER=gmail
@@ -17,7 +20,8 @@ EMAIL_TO=some.user@example
 
 # Notifier details
 # accepting either specific Date in the form YYYY-MM-DD or TODAY
-SEARCH_DATE=TODAY
+COMMITS_FILTER_DATE=TODAY
+SCHEDULE_DATE=hour:21,minute:10
 
 # Comma separated list of paths to watch
-WATCH_LIST=Project-Name\Scripts-v2\appDev\folderView.js,Project-Name\Scripts\components\component-folder
+WATCH_LIST=Project-Name/Scripts-v2/appDev/folderView.js,Project-Name/Scripts/components/component-folder
