Added filtering by author; Added eslint; Changed to ES2016;

--- a/.env_example
+++ b/.env_example
@@ -21,6 +21,7 @@ EMAIL_TO=some.user@example
 # Notifier details
 # accepting either specific Date in the form YYYY-MM-DD or TODAY
 COMMITS_FILTER_DATE=TODAY
+IGNORE_AUTHORS=Sergey Kosik,sergey.kosik
 SCHEDULE_DATE=hour:21,minute:10
 
 # Comma separated list of paths to watch
