--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "install-win-service": "winser -i",
-    "uninstall-win-service": "winser -r"
+    "uninstall-win-service": "winser -r",
+    "lint": "eslint \"**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -25,14 +26,26 @@
   },
   "homepage": "https://github.com/Havrl/bitbucket-repo-watcher#readme",
   "dependencies": {
+    "bluebird": "^3.5.3",
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-schedule": "^1.3.1",
     "nodemailer": "^5.1.1",
-    "npm": "^6.7.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "winser": "^1.0.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint-plugin-import": "^2.15.0",
+    "mocha": "^5.2.0"
+  },
+  "engines": {
+    "node": ">=8.11.3",
+    "npm": ">=5.6.0"
   }
 }
