Added manual start to bypass scheduler - helpful for testing

--- a/.env_example
+++ b/.env_example
@@ -1,8 +1,3 @@
-# Uncomment 3 lines below to tunnel through Fiddler
-# HTTP_PROXY=http://127.0.0.1:8888
-# HTTPS_PROXY=http://127.0.0.1:8888
-# NODE_TLS_REJECT_UNAUTHORIZED=0
-
 # Bitbucket details
 BITBUCKET_REPO_URL=https://api.bitbucket.org/2.0/repositories/user/repo-slug/
 BITBUCKET_REPO_DESC=ocrex.desktop.docurec-v2
@@ -26,3 +21,9 @@ SCHEDULE_DATE=hour:21,minute:10
 
 # Comma separated list of paths to watch
 WATCH_LIST=Project-Name/Scripts-v2/appDev/folderView.js,Project-Name/Scripts/components/component-folder
+
+
+# For debugging uncomment 3 lines below to tunnel through Fiddler
+# HTTP_PROXY=http://127.0.0.1:8888
+# HTTPS_PROXY=http://127.0.0.1:8888
+# NODE_TLS_REJECT_UNAUTHORIZED=0
