--- a/.env_example
+++ b/.env_example
@@ -4,7 +4,7 @@ BITBUCKET_REPO_DESC=ocrex.desktop.docurec-v2
 BITBUCKET_USER=user_name
 BITBUCKET_PASS=pass$$ord
 # 30 commits per page
-COMMIT_PAGES=4;
+COMMIT_PAGES=4
 
 # Email sender details
 EMAIL_PROVIDER=gmail
