--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "bitbucket repo watcher",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "now": "node index.js -now",
+    "start": "npm run build && node dist/index.js",
+    "now": "npm run build && node dist/index.js -now",
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "install-win-service": "winser -i",
     "uninstall-win-service": "winser -r",
     "lint": "eslint \"**/*.js\""
@@ -38,15 +39,14 @@
     "winser": "^1.0.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
     "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.15.0",
-    "mocha": "^5.2.0"
-  },
-  "engines": {
-    "node": ">=8.11.3",
-    "npm": ">=5.6.0"
+    "mocha": "^5.2.0",
+    "rimraf": "^2.6.3"
   }
 }
