Commits can be filtered out by branches and commit messages;

--- a/.env_example
+++ b/.env_example
@@ -17,6 +17,8 @@ EMAIL_TO=some.user@example
 # accepting either specific Date in the form YYYY-MM-DD or TODAY
 COMMITS_FILTER_DATE=TODAY
 IGNORE_AUTHORS=Sergey Kosik,sergey.kosik
+IGNORE_COMMITS=master,default
+IGNORE_COMMITS_WITH_MESSAGES=Merge with default,Merge with master
 SCHEDULE_DATE=hour:21,minute:10
 
 # Comma separated list of paths to watch
