Commit hash as url in the notification email

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,6 @@
 # Bitbucket details
-BITBUCKET_REPO_URL=https://api.bitbucket.org/2.0/repositories/user/repo-slug/
+BITBUCKET_REPO_WEB_URL=https://bitbucket.org/user/repo-slug/
+BITBUCKET_REPO_API_URL=https://api.bitbucket.org/2.0/repositories/user/repo-slug/
 BITBUCKET_REPO_DESC=ocrex.desktop.docurec-v2
 BITBUCKET_USER=user_name
 BITBUCKET_PASS=pass$$ord
