--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "extends": "airbnb-base",
   "env": {
     "node": true,
-    "mocha": true,
+    "jasmine": true,
     "es6": true
   },
   "plugins": ["chai-friendly"],
