Added yesterday date option;

--- a/.env_example
+++ b/.env_example
@@ -15,7 +15,7 @@ EMAIL_FROM=some.user@example.com
 EMAIL_TO=some.user@example
 
 # Notifier details
-# accepting either specific Date in the form YYYY-MM-DD or TODAY
+# accepting either specific Date in the form YYYY-MM-DD or TODAY or YESTERDAY
 COMMITS_FILTER_DATE=TODAY
 IGNORE_AUTHORS=Sergey Kosik,sergey.kosik
 IGNORE_BRANCHES=master,default
